rabbitmq/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: endpoint
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: ui
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq
