rabbitmq/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rabbitmq.<YOUR_DOMAIN>
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq
          servicePort: 15672
